@startuml
abstract Observable{

}

interface Observer{
+ update(o : Observable, arg : Object)
}

abstract Item{
- {static} logger : Logger
# name : String
# initTime : LocalDateTime
# endTime : LocalDateTime
# totalTIme : Duration
# active : boolean
# father : Project
# {abstract} getDurationBetween(ini : LocalDateTime, end : LocalDateTime) : Duration
+ {abstract} getTotalTime() : Duration
+ updateEnd(end : LocalDateTime)
+ updateIni(ini : LocalDateTime)
+ updateTotalTime(d : Duration)
+ {abstract} acceptVisitor(v : Visitor)
+ {abstract} toJson(depth : int) : JSONObject
}


class Project{
- {static} logger : Logger
+ Project(name : String)
+ Project(name : String, father : Project)
# getDurationBetween(ini : LocalDateTime, end : LocalDateTime) : Duration
+ addTask(task : Task)
+ getTotalTime() : Duration
+ acceptVisitor(v : Visitor)
+ toJson(depth : int) : JSONObject
}

class Task{
- {static} logger : Logger
+ startWorking()
+ stopWorking()
# getDurationBetween(ini : LocalDateTime, end : LocalDateTime) : Duration
+ getTotalTime() : Duration
+ acceptVisitor(v : Visitor)
+ addInterval(i : Interval)
+ getLastInterval() : Interval
+ toJson(depth : int) : JSONObject
}

class Interval{
- {static} logger : Logger
- initTime : LocalDateTime
- endTime : LocalDateTime
- clock : ClockTimer
- duration : Duration
+ stopInterval()
+ getInterval() : Duration
+ update(o : Observable, arg : Object)
+ acceptVisitor(v : Visitor)
+ updateEnd(end : LocalDateTime)
+ updateIni(ini : LocalDateTime)
+ toJson(depth : int) : JSONObject
}

class ClockTimer{
- {static} logger : Logger
- timer : Timer
- dateTime : LocalDateTime
- {static} instance : ClockTimer
- {static} periode : int
+ {static} getInstance() : ClockTimer
+ start()
+ stop()
}

interface Visitor{
- {static} logger : Logger
+ visitTask(t : Task);
+ visitInterval(i : Interval);
+ visitProject(p : Project);
}

class Printer{
- {static} logger : Logger
- clock : ClockTimer
- root : Project
+ Printer(root : Project)
+ visitTask(t : Task)
+ visitInterval(i : Interval)
+ visitProject(p : Project)
+ update(o : Observable, arg : Object)
}

class Json{
- {static} logger : Logger
- root : Project
- file : File
- jsonString : String
+ saveRoot(i : Item)
+ jsonator(i : Interval,jsonArray : JSONArray)
+ jsonator(t : Task,jsonArray : JSONArray)
+ jsonator(p : Project,jsonArray : JSONArray)
+ visitTask(t : Task)
+ visitInterval(i : Interval)
+ visitProject(p : Project)
}

class File{
- {static} logger : Logger
- path : String
+ readJson() : Project
- recorrerJsonArrayItem(arr : JSONArray, father : Project)
- recorrerJsonArrayInterval(arr : JSONArray, father : Task)
+ createProject(json : JSONObject, father : Project)
+ createTask(json : JSONObject, father : Project
+ createInterval(json : JSONObject, father : Task)
+ writeJSONFile(json : JSONObject)
}

class PrintTree{
- {static} logger : Logger
- clock : ClockTimer
- root : Project
+ PrintTree(root : Project)
+ visitTask(t : Task)
+ visitInterval(i : Interval)
+ visitProject(p : Project)
}

class TagSearcher{
- root : Project
- {static} logger : Logger
- tag : String
+ TagSearcher(root : Project)
+ searchTask(tag : String)
+ visitTask(t: Task)
+ visitProject(p : Project)
}

class Id{
- id : int
- {static} instance : Id
+ {static} getInstance() : Id
+ setId(id : int)
+ getId() : int
}

Item <|--- Project
Item <|--- Task
Item "*"<---*"1" Project : items
Interval "*"<---*"1" Task : intervals
Observer <|.. Interval
Observable <|-- ClockTimer
Observer <|.. Printer
Visitor <|.. Printer
Visitor <|.. Json
File "1"<--"1" Json : file
Visitor <|.. PrintTree
Visitor <|.. TagSearcher
TagSearcher o-- Item : tagfound
@enduml